--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 fitz==0.0.1.dev2
-Flask
+Flask~=3.0.3
 openai==0.28.1
 pandas==2.2.2
 pathlib==1.0.1
@@ -11,3 +11,5 @@ PyPDF2==3.0.1
 numpy
 sqlite3
 webbrowser
+
+werkzeug~=3.0.3
